--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
         </div>
       </div>
       <div class="col-md-6 headerText">
-        <p>Telefon: 0123456789</p>
-        <p>Tecuci</p>
+        <p>Telefon:<span style="color: #E32024"> 0123456789</span></p>
+        <h1>Anvelope, Service roti Tecuci</h1>
       </div>
     </div>
   </div>
