--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src="js/vendor/jquery-1.7.1.min.js"></script>
         <script src="js/vendor/filtrify.min.js"></script>
@@ -68,7 +69,7 @@
                         <a href="#">Anvelope</a>
                     </li>
                     <li class="navbar-custom">
-                        <a href="#">Vulcanizare</a>
+                        <a href="vulcanizare.html">Vulcanizare</a>
                     </li>
                     <li class="navbar-custom">
                         <a href="contact.html">Contact</a>
@@ -80,11 +81,13 @@
         <!-- /.container -->
       </nav>
 
+      
+
       <!--Search Container  -->
       <section>
         <div class="container firstContainer">
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-sm-8">
               <div class="search-content">
                 <h2>Cauta anvelope</h2>
                 <div id="here"></div>
@@ -92,8 +95,8 @@
               </div>
             </div>
 
-            <div class="col-md-4">
-              <img id="rowOfTires" src="http://www.capitaltirecenter.com/images/Row-of-Tires.png">
+            <div class="col-md-4 hidden-xs">
+              <img id="rowOfTires" src="img/Row-of-Tires.png">
 
             </div>
           </div>
@@ -405,6 +408,9 @@
           <div class="copyright-tag">Copyright © 2017 M & Dany srl. Toate drepturile rezervate.</div>
         </div>
       </footer>
+
+
+
 
 
 
