--- a/vulcanizare.html
+++ b/vulcanizare.html
@@ -60,10 +60,10 @@
                         <a href="#">Anvelope</a>
                     </li>
                     <li class="navbar-custom">
-                        <a href="vulcanizare.html">Vulcanizare</a>
+                        <a href="#">Vulcanizare</a>
                     </li>
                     <li class="navbar-custom">
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -76,54 +76,15 @@
       <section style="margin: 50px 0 80px 0;">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <div class="well well-sm">
-                        <form class="" method="post">
-                            <fieldset>
-                                <legend class="text-xs-center header">Lasa-ne un mesaj</legend>
-                                <div class="form-group">
-                                    <div class="col-md-10 offset-md-1">
-                                        <input id="fname" name="name" type="text" placeholder="Nume" class="form-control">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-md-10 offset-md-1">
-                                        <input id="lname" name="name" type="text" placeholder="Prenume" class="form-control">
-                                    </div>
-                                </div>
 
-                                <div class="form-group">
-                                    <div class="col-md-10 offset-md-1">
-                                        <input id="email" name="email" type="text" placeholder="Adresa de email" class="form-control">
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="col-md-10 offset-md-1">
-                                        <input id="phone" name="phone" type="text" placeholder="Telefon" class="form-control">
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="col-md-10 offset-md-1">
-                                        <textarea class="form-control" id="message" name="message" placeholder="Lasa-ne un mesaj si vom incerca sa iti raspundem cat mai repede si cat mai la obiect!" rows="7"></textarea>
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <div class="col-md-12 text-xs-center">
-                                        <button type="submit" class="btn btn-primary btn-lg">Trimite</button>
-                                    </div>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <div>
+                      <h3 style="margin-bottom:40px; text-align:left;">Service-ul nostru este dotat cu utilaje de ultima generatie, operat de personal cu experienta. Asta inseamna eficienta mai mare pentru noi si timp mai scurt pentru tine.</h3>
                         <div class="card ">
-                            <div class="text-xs-center header">Unde ne poti gasi</div>
+
+                            <div style="width:50%; margin-bottom:20px;" class="text-xs-center header">Unde ne poti gasi</div>
                             <div class="card-block text-xs-center">
+
                                 <h4>Adresa</h4>
                                 <div>
                                 Strada: General Dragalina, nr<br />
@@ -199,7 +160,7 @@
 
         <script src="js/vendor/bootstrap.min.js"></script>
 
-        
+
 
         <!--Google maps  -->
         <script src="http://maps.google.com/maps/api/js?key=AIzaSyDf21tUWC4USlxb8v81vLcwxWk3M3PG97I"></script>
