--- a/vulcanizare.html
+++ b/vulcanizare.html
@@ -57,10 +57,10 @@
                         <a href="index.html">Acasa</a>
                     </li>
                     <li class="navbar-custom">
-                        <a href="#">Anvelope</a>
+                        <a href="Anvelope.html">Anvelope</a>
                     </li>
                     <li class="navbar-custom">
-                        <a href="#">Vulcanizare</a>
+                        <a href="#">Service Roti</a>
                     </li>
                     <li class="navbar-custom">
                         <a href="contact.html">Contact</a>
@@ -80,9 +80,22 @@
                 <div class="col-md-12">
                     <div>
                       <h3 style="margin-bottom:40px; text-align:left;">Service-ul nostru este dotat cu utilaje de ultima generatie, operat de personal cu experienta. Asta inseamna eficienta mai mare pentru noi si timp mai scurt pentru tine.</h3>
+                      <h4 style="font-weight: bold;">Serviciile oferite:</h4>
+                      <ul>
+                        <li><p>Schimbat anvelope</p></li>
+                        <li><p>Echilibrat roti</p></li>
+                        <li><p>Geometrie roti</p></li>
+                        <li><p>Reparatii anvelope si camere de aer</p></li>
+                        <li><p>Schimb ulei</p></li>
+                        <li><p>Incarcare freon aer conditionat</p></li>
+
+
+
+                      </ul>
+
                         <div class="card ">
 
-                            <div style="width:50%; margin-bottom:20px;" class="text-xs-center header">Unde ne poti gasi</div>
+                            <div style="width:50%; margin-bottom:20px; margin-top:50px;" class="text-xs-center header">Unde ne poti gasi</div>
                             <div class="card-block text-xs-center">
 
                                 <h4>Adresa</h4>
