--- a/contact.html
+++ b/contact.html
@@ -57,10 +57,10 @@
                         <a href="index.html">Acasa</a>
                     </li>
                     <li class="navbar-custom">
-                        <a href="#">Anvelope</a>
+                        <a href="Anvelope.html">Anvelope</a>
                     </li>
                     <li class="navbar-custom">
-                        <a href="vulcanizare.html">Vulcanizare</a>
+                        <a href="vulcanizare.html">Service Roti</a>
                     </li>
                     <li class="navbar-custom">
                         <a href="#">Contact</a>
@@ -199,7 +199,7 @@
 
         <script src="js/vendor/bootstrap.min.js"></script>
 
-        
+
 
         <!--Google maps  -->
         <script src="http://maps.google.com/maps/api/js?key=AIzaSyDf21tUWC4USlxb8v81vLcwxWk3M3PG97I"></script>
