--- a/index.html
+++ b/index.html
@@ -1,31 +1,19 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+ <html lang="RO">
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
-
-        <script type="text/javascript">
-
-        </script>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <script src="js\vendor\jquery-3.2.1.slim.min.js"></script>
-        <script>var $i = jQuery.noConflict();</script>
+
         <link rel="stylesheet" href="css/bootstrap.min.css">
+
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-        <script src="js/vendor/jquery-1.7.1.min.js"></script>
-        <script src="js/vendor/filtrify.min.js"></script>
-        <script src="js/vendor/jPages.min.js"></script>
-        <link rel="stylesheet" href="css/filtrify.css">
 
+        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
   <header>
@@ -66,10 +54,10 @@
                         <a href="index.html">Acasa</a>
                     </li>
                     <li class="navbar-custom">
-                        <a href="#">Anvelope</a>
+                        <a href="Anvelope.html">Anvelope</a>
                     </li>
                     <li class="navbar-custom">
-                        <a href="vulcanizare.html">Vulcanizare</a>
+                        <a href="vulcanizare.html">Service Roti</a>
                     </li>
                     <li class="navbar-custom">
                         <a href="contact.html">Contact</a>
@@ -81,278 +69,23 @@
         <!-- /.container -->
       </nav>
 
-      
 
-      <!--Search Container  -->
-      <section>
-        <div class="container firstContainer">
-          <div class="row">
-            <div class="col-sm-8">
-              <div class="search-content">
-                <h2>Cauta anvelope</h2>
-                <div id="here"></div>
-                <div id="reset"><span>Reseteaza cautarea</span></div>
-              </div>
-            </div>
+      <section class="parallax">
+        <div class="container" >
+          <h1 id=mainHeader><strong>Anvelope</strong> pentru orice anotimp sau drum...</h1>
+          <a href="Anvelope.html" class="ht-btn ht-btn-default">Detalii</a>
 
-            <div class="col-md-4 hidden-xs">
-              <img id="rowOfTires" src="img/Row-of-Tires.png">
-
-            </div>
-          </div>
-         </div>
-
-
-
+        </div>
 
       </section>
 
-
-
-
-
-      <section id="items">
-
-      <div class="container itemsContainer">
-
-          <ul id="productList">
-            <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155/85/R13C Vara POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-            </div>
-          </li>
-
-          <li data-Inaltime="195" data-Latime="50" data-Diametru="R15" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>195/50/R15 Vara POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-            </div>
-          </li>
-
-          <li data-Inaltime="185" data-Latime="75" data-Diametru="R14" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>195/50/R15 Iarna POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-            </div>
-          </li>
-
-          <li data-Inaltime="175" data-Latime="65" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>195/50/R15 All Season POWERTRAC</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-
-      </li>
-
-      <li data-Inaltime="155" data-Latime="75" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155/85/R13C All Season POWERTRAC</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-            </div>
-          </li>
-
-          <li data-Inaltime="210" data-Latime="85" data-Diametru="R16" data-Sezon="Iarna" data-Calitate="Noi" data-Vehicul="Camion">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-            </div>
-          </li>
-
-          <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Iarna" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-            </div>
-          </li>
-
-          <li data-Inaltime="165" data-Latime="65" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Ranforsat" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-
-      </li>
-
-      <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-            </div>
-          </li>
-
-          <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-        </li>
-
-        <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Moped">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-        </li>
-
-        <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-        </li>
-
-        <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-        </li>
-
-        <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-        </li>
-
-        <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-        </li>
-
-        <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-        </li>
-
-        <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-        </li>
-
-        <li data-Inaltime="155" data-Latime="85" data-Diametru="R13C" data-Sezon="Vara" data-Calitate="Noi" data-Vehicul="Autoturism">
-            <div class="col-md-3">
-              <div class="product">
-      					 <img src="img/pic2.png" alt=""/>
-      					 <h3>155R13C 85/83Q POWERTRAC VANTOUR</h3>
-      					 <div class="price">
-      					<p>160 lei buc</p>
-      				 </div>
-      				</div>
-          </div>
-        </li>
-      </ul>
-
-      </div>
-      <div class="container">
-      <div class="holder"></div>
-    </div>
-
-
-      </section>
-
-      <!--Reclama -->
 
       <section>
         <div class="container commercialContainer">
           <div class="row" style="margin: 20px 0 20px 0">
 
             <div class="col-md-4">
-              <h3>Cele mai mici preturi la Anvelope</h3>
+              <h2 style="color:#172548 !important; text-align:center">Cele mai mici preturi la <a href="Anvelope.html">Anvelope</a></h2>
               <img src="img/downgraph.png" id="downGraph">
             </div>
 
@@ -361,7 +94,7 @@
             </div>
 
             <div class="col-md-4">
-              <h3>Asiguram montajul la sediul din Tecuci</h3>
+              <h2 style="color:#172548 !important; text-align:center">Asiguram montajul la sediul din <a href="Vulcanizare.html">Tecuci</a></h2>
               <img src="img/vulcanizare.jpg" id="vulcanizarePic">
             </div>
 
@@ -369,6 +102,11 @@
         </div>
 
       </section>
+
+
+
+
+
 
 
       <!--Footer -->
@@ -386,9 +124,9 @@
                   <div class="footer-col-item">
                     <h4>Adresa</h4>
                     <address>
-                      Strada: General Dragalina, nr
-                        <br>
-                        Tecuci, judetul Galati
+                    Strada: General Dragalina, nr
+                    <br>
+                    Tecuci, judetul Galati
                     </address>
                   </div>
                 </div>
@@ -415,6 +153,15 @@
 
 
 
+        <!--Google maps  -->
+
+
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+        <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/main.js"></script>
 
 
 
@@ -422,17 +169,5 @@
 
 
 
-
-
-
-
-        <script src="js/main.js">
-
-        </script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-
-        </script>
     </body>
 </html>
