--- a/anvelope.html
+++ b/anvelope.html
@@ -182,7 +182,7 @@
                    <option value="" selected="selected">Toate</option>
                    <option value="Vara">vara</option>
                    <option value="Iarna">iarna</option>
-                   <option value="All Season">all Season</option>
+                   <option value="all seasons">All seasons</option>
                    </select>
                  </td>
                </tr>
@@ -192,6 +192,7 @@
            <input type="submit" value="Cautare Anvelope" class="advancedSubmit" >
            </form>
 
+            <button onclick="location.reload();" type="button" class="btn btn-danger reset" >Reseteaza</button>
 
 
          </div>
@@ -212,7 +213,10 @@
           <ul id="productList">
 
         </ul>
-        <div class="pagination"></div>
+
+      </div>
+      <div class="container ">
+        <div class="pagination " ></div>
       </div>
 
 
@@ -289,7 +293,7 @@
 
 
 
-
+        <script src="js/vendor/jquery.elevateZoom-3.0.8.min.js"></script>
         <script src="js/vendor/paginate.js"></script>
 
         <script src="js/products.js"></script>
